<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@drawable/bg_1"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/judul2"
        android:textColor="@color/black"
        android:text="@string/judul_page2"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="70dp"
        android:textSize="28dp"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/keterangan"
        android:layout_below="@+id/judul2"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teks_username"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/p2_t1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/data_username"
            android:layout_toEndOf="@+id/teks_username"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="5dp"
            android:text="@string/p2_t2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teks_email"
            android:layout_below="@+id/teks_username"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginVertical="5dp"
            android:text="@string/p2_t3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/data_email"
            android:layout_marginStart="5dp"
            android:layout_marginVertical="5dp"
            android:layout_toEndOf="@id/teks_email"
            android:fontFamily="@font/poppins_regular"
            android:layout_below="@+id/teks_username"
            android:text="@string/p2_t4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lanjutan_email"
            android:layout_marginStart="5dp"
            android:layout_marginVertical="5dp"
            android:layout_toEndOf="@id/data_email"
            android:fontFamily="@font/poppins_regular"
            android:layout_below="@+id/teks_username"
            android:text="@string/p2_t5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/teks_phone"
            android:layout_marginVertical="5dp"
            android:layout_below="@+id/teks_email"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/p2_t6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/data_phone"
            android:layout_marginStart="5dp"
            android:layout_marginVertical="5dp"
            android:layout_toEndOf="@id/teks_phone"
            android:fontFamily="@font/poppins_regular"
            android:layout_below="@+id/teks_email"
            android:text="@string/p2_t7"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lanjutan_phone"
            android:layout_marginStart="5dp"
            android:layout_marginVertical="5dp"
            android:layout_toEndOf="@id/data_phone"
            android:fontFamily="@font/poppins_regular"
            android:layout_below="@+id/teks_email"
            android:text="@string/p2_t8"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:background="@drawable/custom_button"
        android:id="@+id/btn_register"
        android:text="Got it"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_below="@+id/keterangan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

</RelativeLayout>